Fixed spacing and tooltip order

--- a/src/assets/sass/theme-helpers.scss
+++ b/src/assets/sass/theme-helpers.scss
@@ -535,7 +535,7 @@ button.badge {
 .filter-badge {
   display: flex;
   color: var(--neutral-300);
-  border: 1px solid rgba(212, 212, 212, 0.3);
+  border: 1px solid rgba(212, 212, 212, 0.1);
   padding: 0.75rem 1.5rem 0.75rem 0.75rem;
   background: rgba(34, 34, 34, 0.5);
   backdrop-filter: blur(6px);
